--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,68 @@
-<h1>Counter Index</h1>
+    <!DOCTYPE html>
+    <html lang="en">
 
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<div>
-    Start here
+    <body>
+        <div class="head">
+            <h1>Pizza Perfect</h1>
+        </div>
+        <div class="cart">
+            <h2>Shopping Cart</h2>
+            <p>Small x{{smallNum}} {{smallCost}}</p>
+            <p>Medium x{{mediumNum}} {{mediumCost}}</p>
+            <p>Large x{{largeNum}} {{largeCost}}</p>
+            <p id="total">Order Total: {{totalCost}}</p>
 
-    <form action="/count" method="post">
-        <div class="counter" >
-            {{counter}}
-        </div>    
-        <input type="submit" value="Press button to count">
-    
-    </form>
+            <form action="" method="post">
+                <button type="submit" name="orderBtn" value="Order">Order</button>
+            </form>
 
-</div>
+        </div><br>
+
+        <div class="pizzaSize">
+            <div class="large">
+                <img src="pizza.png" alt="pizza image"><br><br>
+                <h3>Large Pizza</h3>
+                <h3>R87.99</h3><br>
+                <p>large margeritha pizza with 3 toppings max, 3 meat toppings max, 3 or less other toppings.</p>
+                <br><br>
+                <form action="/add" method="POST">
+                    <button type="submit" value="large" name="buyBtn">BUY</button>
+                </form>
+            </div>
+            
+            <div class="medium">
+                <img src="pizza.png" alt="pizza image"><br><br>
+                <h3>Medium Pizza</h3>
+                <h3>R58.99</h3><br>
+                <p>medium margeritha pizza with 3 toppings max, 2 meat toppings max, 3 or less other toppings.</p>
+                <br><br>
+                <form action="/add" method="POST">
+                    <button type="submit" value="medium" name="buyBtn">BUY</button>
+                </form>
+            </div>
+
+            <div class="small">
+                <img src=" pizza.png" alt="pizza image"><br><br>
+                <h3>Small Pizza</h3>
+                <h3>R31.99</h3><br>
+                <p>small margeritha pizza with 3 toppings max, 1 meat topping, 3 or less other toppings.</p><br><br>
+                <form action="/add" method="POST">
+                    <button type="submit" value="small" name="buyBtn">BUY</button>
+                </form>
+            </div>
+        </div>
+
+        <footer>
+            <p>Contact us at: 4444444</p>
+        </footer>
+    </body>
+
+    </html>
