--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -1,4 +1,4 @@
-<h1>My info</h1>
+{{!-- <h1>My info</h1>
 	<form action="/info" method="POST" >
 		
 		<div>
@@ -13,4 +13,4 @@
 
 		<input type="submit">
 
-	</form>
+	</form> --}}
