--- a/views/names.handlebars
+++ b/views/names.handlebars
@@ -1,4 +1,4 @@
-<h1>Names</h1>
+{{!-- <h1>Names</h1>
 
 
 Name count: {{names.length}}
@@ -10,7 +10,7 @@ Name count: {{names.length}}
 		<th>First name</th>
 		<th>Last name</th>
 	</tr>
-	
+
 	{{#each names}}
 	<tr>
 		<td>
@@ -22,4 +22,22 @@ Name count: {{names.length}}
 	</tr>
 	{{/each}}
 
-</table>
+</table> --}}
+
+{{!-- <table> --}}
+	{{!-- <tr>
+		<th>Type</th>
+		<th>Price</th>
+		<th>When</th>
+	</tr> --}}
+
+	{{!-- {{#each actions}}
+	<tr>
+		<td>{{size}}</td>
+		<td>{{count}}</td>
+		<td>{{price}}</td>
+		<td>{{Total Cost}}</td>
+	</tr>
+	{{/each}}
+
+</table> --}}
