--- a/public/style.css
+++ b/public/style.css
@@ -9,8 +9,8 @@ body {
 	width: 80%;
 	padding: 1em;
 	margin-bottom: 0.25em;
+	text-align: center;
 }
-
 
 .counter {
 	background-color: lightgray;
@@ -75,7 +75,7 @@ h2{
 	border: 2px solid white;
 }
 
-input[type="submit"]{
+button[type="submit"]{
     background: gray;
     padding: 0.5rem;
     cursor: pointer;
@@ -87,6 +87,29 @@ input[type="submit"]{
 footer{
 	background-color: #F7EDF0;
 	width: 80%;
+	margin: auto;
+	padding: 1em;
+	/* display: flex; */
+}
+
+table, tr, td{
+	border: 1px solid black;
+}
+
+/* .info1{
+	float: left;
+} */
+
+table{
+	margin-left: auto;
+	margin-right: auto;
+	width: 60%;
+	text-align: center;
+}
+
+.orderTable{
+	background-color: #F7EDF0;
+	width: 70%;
 	margin: auto;
 	padding: 1em;
 }
